[package]
name = "rbuilder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
eyre.workspace = true
thiserror.workspace = true
reth.workspace = true
reth-db.workspace = true
reth-errors.workspace = true
reth-payload-builder.workspace = true
reth-trie.workspace = true
reth-trie-parallel.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
revm.workspace = true
revm-inspectors.workspace = true
reth-node-ethereum.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-chains.workspace = true
alloy-evm.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-network-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-signer-local.workspace = true
alloy-eips.workspace = true

ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true

test_utils = { path = "src/test_utils" }
metrics_macros = { path = "src/telemetry/metrics_macros" }

reqwest = { workspace = true, features = ["blocking"] }
serde_with = { workspace = true, features = ["time_0_3"] }
primitive-types = "0.12.1"
url.workspace = true
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "sqlite",
    "chrono",
    "bigdecimal",
    "time",
    "uuid",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
futures = "0.3.28"
time.workspace = true
bigdecimal = "0.4.1"
mempool-dumpster = "0.1.1"
itertools = "0.11.0"
clap.workspace = true
priority-queue = "2.0.3"
secp256k1 = { workspace = true, features = [
    "global-context",
    "std",
    "recovery",
] }
rayon = "1.8.0"
flate2.workspace = true
# Version required by ethereum-consensus beacon-api-client
mev-share-sse = { git = "https://github.com/paradigmxyz/mev-share-rs", rev = "9eb2b0138ab3202b9eb3af4b19c7b3bf40b0faa8", default-features = false }
jsonrpsee = { version = "0.20.3", features = ["full"] }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus/", rev = "ade5ce6c4a19107c1059e5338d8f18855bd2d931" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus/", rev = "ade5ce6c4a19107c1059e5338d8f18855bd2d931" }
uuid = { version = "1.6.1", features = ["serde", "v5", "v4"] }
prometheus.workspace = true
warp.workspace = true
lazy_static.workspace = true
ctor.workspace = true
toml = { version = "0.8.8", default-features = false }
ahash.workspace = true
rand = "0.8.5"
lru = "0.12.1"
flume = "0.11.0"
crossbeam-queue = "0.3.10"
integer-encoding = "4.0.0"
sha2 = "0.10.8"
lz4_flex = "0.11.2"
exponential-backoff = "1.2.0"
governor = "0.6.3"
derivative = "2.2.0"
mockall = "0.12.1"
shellexpand = "3.1.0"
async-trait = "0.1.80"
eth-sparse-mpt.workspace = true
sysperf.workspace = true
crossbeam = "0.8.4"
parking_lot.workspace = true
dashmap = "6.1.0"

# IPC state provider deps
reipc = { git = "https://github.com/nethermindeth/reipc.git", rev = "3837f3539201f948dd1c2c96a85a60d589feb4c6" }
quick_cache = "0.6.11"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"


[build-dependencies]
built = { version = "0.7.1", features = ["git2", "chrono"] }

[dev-dependencies]
reth-db-common.workspace = true
alloy-node-bindings.workspace = true
foldhash = "0.1.3"
tempfile = "3.8"
assert_matches = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[features]
# TODO: remove?
optimism = []
redact-sensitive = []

[[bench]]
name = "bench_main"
harness = false
